@@ -10,7 +10,7 @@
 defined('_JEXEC') or die;
 
 // Import library dependencies
-jimport('joomla.application.component.modellist');
+require_once dirname(__FILE__) . '/extension.php';
 
 /**
  * Installer Manage Model
@@ -19,7 +19,7 @@ jimport('joomla.application.component.modellist');
  * @subpackage	com_installer
  * @since		1.5
  */
-class InstallerModelManage extends JModelList {
+class InstallerModelManage extends InstallerModel {
 	protected $_context = 'com_installer.manage';
 
 	/**
@@ -195,102 +195,6 @@ class InstallerModelManage extends JModelList {
 	}
 
 	/**
-	 * Returns an object list
-	 *
-	 * @param	string The query
-	 * @param	int Offset
-	 * @param	int The number of records
-	 * @return	array
-	 */
-	protected function _getList($query, $limitstart = 0, $limit = 0) {
-		$search = $this->getState('filter.search');
-		$this->_db->setQuery($query);
-		$result = $this->_db->loadObjectList();
-		$lang = JFactory::getLanguage();
-		foreach($result as $i => $row) {
-			if (strlen($row->manifest_cache)) {
-				$data = unserialize($row->manifest_cache);
-				if ($data) {
-					foreach($data as $key => $value) {
-						if ($key == 'type') {
-							// ignore the type field
-							continue;
-
-							
-						}
-						$row->$key = $value;
-					}
-				}
-			}
-			$path = $row->client_id ? JPATH_ADMINISTRATOR : JPATH_SITE;
-			switch ($row->type) {
-				case 'component':
-					$extension = $row->element;
-					$source = JPATH_ADMINISTRATOR . '/components/' . $row->name;
-						$lang->load("$extension.sys", JPATH_ADMINISTRATOR, null, false, false)
-					||	$lang->load("$extension.sys", $source, null, false, false)
-					||	$lang->load("$extension.sys", JPATH_ADMINISTRATOR, $lang->getDefault(), false, false)
-					||	$lang->load("$extension.sys", $source, $lang->getDefault(), false, false);
-				break;
-				case 'library':
-					$extension = 'lib_' . $row->element;
-						$lang->load("$extension.sys", JPATH_SITE, null, false, false)
-					||	$lang->load("$extension.sys", JPATH_SITE, $lang->getDefault(), false, false);
-				break;
-				case 'module':
-					$extension = $row->element;
-					$source = $path . '/modules/' . $row->name;
-						$lang->load("$extension.sys", $path, null, false, false)
-					||	$lang->load("$extension.sys", $source, null, false, false)
-					||	$lang->load("$extension.sys", $path, $lang->getDefault(), false, false)
-					||	$lang->load("$extension.sys", $source, $lang->getDefault(), false, false);
-				break;
-				case 'package':
-					$extension = 'pkg_' . $row->element;
-						$lang->load("$extension.sys", JPATH_SITE, null, false, false)
-					||	$lang->load("$extension.sys", JPATH_SITE, $lang->getDefault(), false, false);
-				break;
-				case 'plugin':
-					$extension = 'plg_' . $row->folder . '_' . $row->element;
-					$source = JPATH_PLUGINS . '/' . $row->folder . '/' . $row->element;
-						$lang->load("$extension.sys", JPATH_ADMINISTRATOR, null, false, false)
-					||	$lang->load("$extension.sys", $source, null, false, false)
-					||	$lang->load("$extension.sys", JPATH_ADMINISTRATOR, $lang->getDefault(), false, false)
-					||	$lang->load("$extension.sys", $source, $lang->getDefault(), false, false);
-				break;
-				case 'template':
-					$extension = 'tpl_' . $row->name;
-					$source = $path . '/templates/' . $row->name;
-						$lang->load("$extension.sys", $path, null, false, false)
-					||	$lang->load("$extension.sys", $source, null, false, false)
-					||	$lang->load("$extension.sys", $path, $lang->getDefault(), false, false)
-					||	$lang->load("$extension.sys", $source, $lang->getDefault(), false, false);
-				break;
-			}
-			$row->name = JText::_($row->name);
-			$row->description = JText::_(@$row->description);
-			$row->author_info = @$row->authorEmail .'<br />'. @$row->authorUrl;
-			$row->client = $row->client_id ? JText::_('JADMINISTRATOR') : JText::_('JSITE');
-			if ($search && !preg_match("/$search/i", $row->name)) {
-				unset($result[$i]);
-				continue;
-			}
-		}
-		JArrayHelper::sortObjects($result, $this->getState('list.ordering'), $this->getState('list.direction') == 'desc' ? -1 : 1);
-		$total = count($result);
-		$store = $this->_getStoreId('getTotal');
-		$this->_cache[$store] = $total;
-		if ($total < $limitstart) {
-			$limitstart = 0;
-			$this->setState('list.start', 0);
-		}
-		if ($limit > 0) {
-			$result = array_slice($result, $limitstart, $limit);
-		}
-		return $result;
-	}
-
-	/**
 	 * Method to get the database query
 	 *
 	 * @return JDatabaseQuery the database query
@@ -304,11 +208,6 @@ class InstallerModelManage extends JModelList {
 		$query->select('*');
 		$query->from('#__extensions');
 		$query->where('state=0');
-		$query->order('protected');
-		$query->order('type');
-		$query->order('client_id');
-		$query->order('folder');
-		$query->order('name');
 		if ($hideprotected) {
 			$query->where('protected!=1');
 		}
@@ -322,6 +221,13 @@ class InstallerModelManage extends JModelList {
 			
 			$query->where('folder=' . $this->_db->Quote($group == '*' ? '' : $group));
 		}
+
+		// Filter by search in id
+		$search = $this->getState('filter.search');
+		if (!empty($search) && stripos($search, 'id:') === 0) {
+			$query->where('extension_id = '.(int) substr($search, 3));
+		}
+
 		return $query;
 	}
 
