@@ -87,12 +87,26 @@ class PluginsModelPlugins extends JModelList
 	 */
 	protected function _getList($query, $limitstart=0, $limit=0)
 	{
+		$search = $this->getState('filter.search');
 		$ordering = $this->getState('list.ordering', 'ordering');
-		if ($ordering == 'name') {
+		if ($ordering == 'name' || (!empty($search) && stripos($search, 'id:') !== 0)) {
 			$this->_db->setQuery($query);
 			$result = $this->_db->loadObjectList();
 			$this->_translate($result);
+			if (!empty($search)) {
+				foreach($result as $i=>$item) {
+					if (!preg_match("/$search/i", $item->name)) {
+						unset($result[$i]);
+					}
+				}
+			}
 			JArrayHelper::sortObjects($result,'name', $this->getState('list.direction') == 'desc' ? -1 : 1);
+			$total = count($result);
+			$this->_cache[$this->_getStoreId('getTotal')] = $total;
+			if ($total < $limitstart) {
+				$limitstart = 0;
+				$this->setState('list.start', 0);
+			}
 			return array_slice($result, $limitstart, $limit ? $limit : null);
 		}
 		else {
@@ -108,6 +122,7 @@ class PluginsModelPlugins extends JModelList
 			return $result;
 		}
 	}
+
 	/**
 	 * Translate a list of objects
 	 *
@@ -176,15 +191,10 @@ class PluginsModelPlugins extends JModelList
 			$query->where('a.folder = '.$db->quote($folder));
 		}
 
-		// Filter by search in title
+		// Filter by search in id
 		$search = $this->getState('filter.search');
-		if (!empty($search)) {
-			if (stripos($search, 'id:') === 0) {
-				$query->where('a.id = '.(int) substr($search, 3));
-			} else {
-				$search = $db->Quote('%'.$db->getEscaped($search, true).'%');
-				$query->where('a.name LIKE '.$search);
-			}
+		if (!empty($search) && stripos($search, 'id:') === 0) {
+			$query->where('a.extension_id = '.(int) substr($search, 3));
 		}
 
 		return $query;
